--- a/tienda/templates/navbar.html
+++ b/tienda/templates/navbar.html
@@ -31,15 +31,15 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="#"
+            <a class="nav-link" href="{% url 'home' %}"
               >Home</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Catalogo</a>
+            <a class="nav-link" href="{% url 'productos' %}">Productos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contacto</a>
+            <a class="nav-link" href="{% url 'contacto' %}">Contacto</a>
           </li>
         </ul>
       </div>
