--- a/tienda/templates/paginas/home.html
+++ b/tienda/templates/paginas/home.html
@@ -1,9 +1,19 @@
-{% extends "navbar.html" %}
-
-{% block title %} Home {% endblock %}
+{% extends "navbar.html" %} {% block title %} Home {% endblock %} 
 
 {% block contenido %}
 
-Sección de contenido
+<div class="p-5 bg-light">
+  <div class="container">
+    <h1>Bienvenides a nuestra Tienda de Almohadones</h1>
+    <p>
+      Aquí podrás encargar tus almohadones personalizados,
+      para tu hogar, hijes o negocio.
+    </p>
+    <button class="btn btn-outline-primary" type="button">
+      Gastar aguinaldo
+    </button>
+  </div>
+</div>
 
 {% endblock %}
+
