--- a/tienda/templates/productos/form.html
+++ b/tienda/templates/productos/form.html
@@ -10,6 +10,7 @@
       id=""
       aria-describedby="helpId"
       placeholder="{{ campo.label }}"
+      value="{{ campo.value | default: '' }}"
     />
   </div>
   <div class="col-12 help-text">{{ campo.errors }}</div>
