--- a/tienda/templates/productos/index.html
+++ b/tienda/templates/productos/index.html
@@ -24,16 +24,17 @@
                 </thead>
                 <tbody>
                     {% for producto in productos %}
-                    <tr class="">
-                        <td>{{ producto.id }}</td>
-                        <td>{{ producto.titulo }}</td>
-                        <td>
+                    <tr class="col-12">
+                        <td class="col-1">{{ producto.id }}</td>
+                        <td class="col-2">{{ producto.titulo }}</td>
+                        <td class="col-2">
                             <img src={{ producto.imagen.url }} height='100' alt="">
                         </td>
-                        <td>{{ producto.descripcion }}</td>
-                        <td>
-                             <a name="" id="" class="btn btn-info" href="{% url 'editar' %}" role="button">Editar</a> 
-                             <a name="" id="" class="btn btn-danger" href="#" role="button">Borrar</a> 
+                        <td class="col-4">{{ producto.descripcion }}</td>
+                        <td class="col-3">
+                             <a name="" id="" class="btn btn-info" href="{% url 'editar' producto.id %}" role="button">Editar</a> 
+                             |
+                             <a name="" id="" class="btn btn-danger" href="{% url 'eliminar' producto.id %}" role="button">Borrar</a> 
                         </td>
                     </tr>
                     {% endfor %}
