--- a/tienda/templates/productos/form.html
+++ b/tienda/templates/productos/form.html
@@ -3,6 +3,12 @@
   {% for campo in formulario %}
   <div class="mb-3">
     <label for="" class="form-label">{{ campo.label }}</label>
+
+    {% if campo.field.widget.input_type == 'file' and campo.value %}
+    <br/>
+    <img src="{{MEDIA_URL}}/imagenes/{{ campo.value }}" width="100" alt="">
+    {% endif %}
+ 
     <input
       type='{{ campo.field.widget.input_type }}'
       class="form-control"
@@ -10,11 +16,12 @@
       id=""
       aria-describedby="helpId"
       placeholder="{{ campo.label }}"
-      value="{{ campo.value | default: '' }}"
+      value="{{ campo.value }}"
     />
   </div>
   <div class="col-12 help-text">{{ campo.errors }}</div>
   {% endfor %}
 
   <input name="" id="" class="btn btn-success" type="submit" value="Enviar información">
+  <a name="" id="" class="btn btn-danger" href="{% url 'productos' %}" role="button">Cancelar</a>
 </form>
