--- a/tienda/templates/productos/index.html
+++ b/tienda/templates/productos/index.html
@@ -32,7 +32,7 @@
                         </td>
                         <td class="col-4">{{ producto.descripcion }}</td>
                         <td class="col-3">
-                             <a name="" id="" class="btn btn-info" href="{% url 'editar' producto.id %}" role="button">Editar</a> 
+                             <a name="" id="" class="btn btn-dark" href="{% url 'editar' producto.id %}" role="button">Editar</a> 
                              |
                              <a name="" id="" class="btn btn-danger" href="{% url 'eliminar' producto.id %}" role="button">Borrar</a> 
                         </td>
