--- a/tienda/templates/paginas/contacto.html
+++ b/tienda/templates/paginas/contacto.html
@@ -4,6 +4,21 @@
 
 {% block contenido %}
 
-Formulario de contacto
+<div class="row mx-auto p-3">
+    <div class="mb-3 col-8">
+        <label for="" class="form-label">Name</label>
+        <input type="text"
+          class="form-control" name="" id="" aria-describedby="helpId" placeholder="">
+      </div>
+      <div class="mb-3 col-8">
+        <label for="" class="form-label">Email</label>
+        <input type="email" class="form-control" name="" id="" aria-describedby="emailHelpId" placeholder="abc@mail.com">
+      </div>
+      <div class="mb-3 col-8">
+        <label for="" class="form-label"></label>
+        <textarea class="form-control" name="" id="" rows="3"></textarea>
+      </div>
+</div>
+
 
 {% endblock %}
