--- a/tienda/templates/paginas/home.html
+++ b/tienda/templates/paginas/home.html
@@ -1,5 +1,8 @@
 {% extends "navbar.html" %} {% block title %} Home {% endblock %} 
 
+{% load static %}
+
+
 {% block contenido %}
 
 <div class="p-5 bg-light">
@@ -13,6 +16,9 @@
       Gastar aguinaldo
     </button>
   </div>
+</div>
+<div>
+  <img class="w-100" src={% static 'images/fondo.jpg' %} alt="">
 </div>
 
 {% endblock %}
