--- a/tienda/templates/paginas/home.html
+++ b/tienda/templates/paginas/home.html
@@ -10,7 +10,7 @@
     <h1>Bienvenides a nuestra Tienda de Almohadones</h1>
     <p>
       Aquí podrás encargar tus almohadones personalizados,
-      para tu hogar, hijes o negocio.
+      para tu hogar o negocio.
     </p>
     <button class="btn btn-outline-primary" type="button">
       Gastar aguinaldo
@@ -18,7 +18,12 @@
   </div>
 </div>
 <div>
-  <img class="w-100" src={% static 'images/fondo.jpg' %} alt="">
+  <img class="w-100" src={% static 'images/fondo.jpg' %} alt="fondo-modelo">
+</div>
+<div class="w-100 p-5 bg-dark text-white">
+  <div class="w-25">
+    <img class="w-25 rounded-circle" src={% static 'images/cac.png' %} alt="logo-cac">
+  </div>
 </div>
 
 {% endblock %}
