--- a/tienda/templates/paginas/home.html
+++ b/tienda/templates/paginas/home.html
@@ -20,10 +20,11 @@
 <div>
   <img class="w-100" src={% static 'images/fondo.jpg' %} alt="fondo-modelo">
 </div>
-<div class="w-100 p-5 bg-dark text-white">
+<div class="w-100 p-5 bg-dark text-white d-flex">
   <div class="w-25">
     <img class="w-25 rounded-circle" src={% static 'images/cac.png' %} alt="logo-cac">
   </div>
+  <p class="mt-4"><strong>Todos los derechos reservados de este Unicornio tecnológico 2022 &#169.</strong></p>
 </div>
 
 {% endblock %}
