--- a/tienda/templates/navbar.html
+++ b/tienda/templates/navbar.html
@@ -28,17 +28,17 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+        <ul class="mx-auto navbar-nav">
           <li class="nav-item active">
             <a class="nav-link" href="{% url 'home' %}"
-              >Home</a
+              ><strong>Home</strong></a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'productos' %}">Productos</a>
+            <a class="nav-link" href="{% url 'productos' %}"><strong>Productos</strong></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'contacto' %}">Contacto</a>
+            <a class="nav-link" href="{% url 'contacto' %}"><strong>Contacto</strong></a>
           </li>
         </ul>
       </div>
