--- a/tienda/templates/paginas/home.html
+++ b/tienda/templates/paginas/home.html
@@ -12,9 +12,12 @@
       Aquí podrás encargar tus almohadones personalizados,
       para tu hogar o negocio.
     </p>
-    <button class="btn btn-outline-primary" type="button">
-      Gastar aguinaldo
-    </button>
+    <a href="https://www.paypal.com/ar/home?locale.x=es_AR" target="_blank">
+      <button class="btn btn-outline-primary" type="button">
+        Gastar aguinaldo
+      </button>
+    </a>
+    
   </div>
 </div>
 <div>
