Contact form tiny refactors

--- a/tienda/templates/paginas/contacto.html
+++ b/tienda/templates/paginas/contacto.html
@@ -4,7 +4,7 @@
 
 {% block contenido %}
 
-<form method="POST" action="" class="row mx-auto p-3">
+<form method="POST" action="" class="row mt-5 mx-auto p-3 w-50">
   {% csrf_token %}
   {{form}}
   <input class="mt-3 col-4 btn btn-success" type="submit">
